--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header">
             <nav>
                 <div class="logo">
-                    <a href="#"><img src="/img/logo.png" alt=""></a>
+                    <a href="#"><img src="./img/logo.png" alt=""></a>
                 </div>
                 <ul class="nav-list">
                     <li><a href="#">About</a></li>
@@ -110,5 +110,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
